add mongo connectivity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.cloud.stream.kafka.streams.binder.default.consumer.allow.auto.create.topi
 spring.cloud.stream.kafka.streams.binder.configuration.consumerProperties.allow.auto.create.topics=true
 spring.cloud.stream.kafka.streams.binder.consumerProperties.allow.auto.create.topics=true
 spring.cloud.stream.kafka.streams.auto-create-topics=true
+
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=examle
